--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.14.2",
     "express-validator": "^3.0.0",
+    "lodash": "^4.17.2",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.0",
+    "node-restful": "^0.2.5",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0"
